--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-typed": "^1.2.0",
     "react-typist": "^2.0.5",
+    "vuera": "^0.2.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
