--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.2",
+    "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.3",
     "react": "^18.2.0",
@@ -21,6 +22,9 @@
     "react-scripts": "5.0.1",
     "react-typed": "^1.2.0",
     "react-typist": "^2.0.5",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
+    "sweetalert2": "^11.7.1",
     "vuera": "^0.2.7",
     "web-vitals": "^2.1.4"
   },
